Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74475

Compile failure with gstreamer 0.10

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.3, 5.14.0 Alpha
    • 5.12.2
    • Multimedia
    • None
    • Linux/X11
    • 935967a453b47ae7c8e9ad3d94eef3813eab58db (qt/qtmultimedia/5.12)

      Qt 5.12.2 fails to compile with old gstreamer 0.10

      qgstreamerplayersession.cpp: In member function 'void QGstreamerPlayerSession::setPipeline(GstElement*)':
      qgstreamerplayersession.cpp:400:44: error: cannot convert 'GValue* {aka _GValue*}' to 'void**' for argument '2' to 'GstIteratorResult gst_iterator_next(GstIterator*, void**)'
               while (gst_iterator_next (it, &data) == GST_ITERATOR_OK) {
      
      

      I found that the breaking commit being 67c4ec55 Gstreamer: Set custom pipeline using url.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            richardo Richard Öhlinger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes