Fix compile failure with gstreamer 0.10

This fixes an compile failure introduced in commit 67c4ec55.

Fixes: QTBUG-74475
Change-Id: I0dabb72f8b5cdd75336b15515381ff9d9442788f
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>